read args and test connection

--- a/amd64/Dockerfile
+++ b/amd64/Dockerfile
@@ -7,7 +7,7 @@ RUN apk add --no-cache openssh autossh
 
 RUN >/etc/motd
 
-COPY tunnel.sh keygen.sh keyscan.sh connect.sh entry.sh /
+COPY tunnel.sh keygen.sh test.sh entry.sh /
 
 CMD [ "/entry.sh" ]
 
