force password auth off, force protocol 2

--- a/amd64/Dockerfile
+++ b/amd64/Dockerfile
@@ -8,6 +8,7 @@ RUN apk add --no-cache openssh autossh
 RUN >/etc/motd
 
 COPY tunnel.sh keygen.sh test.sh entry.sh /
+COPY ssh_config /etc/ssh/
 
 CMD [ "/entry.sh" ]
 
