--- a/armv7/Dockerfile
+++ b/armv7/Dockerfile
@@ -1,7 +1,5 @@
-FROM schmich/armv7hf-alpine-qemu:latest
+FROM alpine:latest
 MAINTAINER Valdis Adamsons <valdisxp1@gmail.com>
-
-RUN ["cross-build-start"]
 
 RUN echo "http://dl-cdn.alpinelinux.org/alpine/edge/community" >> /etc/apk/repositories
 RUN apk update
@@ -9,9 +7,8 @@ RUN apk add --no-cache openssh autossh
 
 RUN >/etc/motd
 
-RUN ["cross-build-end"]
-
 COPY tunnel.sh keygen.sh test.sh entry.sh /
+COPY ssh_config /etc/ssh/
 
 CMD [ "/entry.sh" ]
 
